--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -22,7 +22,7 @@
         <h2>Jacynda Wilson-Wade</h2>
         <p>I walk like this 'cause I can back it up</p>
 
-        <img src="eyes.jpeg" alt="Save your eyes poster!" >
+        <img src="eyes.JPEG" alt="Save your eyes poster!" >
         <p>This poster is made by the WPA Illinois stafety division.<br> This enforces that you save your eyes by using your goggles while on the job.</p>
     </body>
 </html>
