--- a/assignment3/main.html
+++ b/assignment3/main.html
@@ -11,7 +11,7 @@
             <li><a href="requirements.html">Requirements</a></li>
             <li><a href="classes.html">Classes</a></li>
           </ul></nav>
-<header></header><h1>Creative Technologies Program (CTK)</h1></header>
+<header><h1>Creative Technologies Program (CTK)</h1></header>
 <img src="otter.jpg" alt="A little otter!" >
 
 <main><p><b>Address:</b> Campus Box 5750<br>
@@ -19,9 +19,9 @@
     <b>Director:</b> Rose Marshack<br>
     <b>Degrees Offered:</b> B.A., B.S.<br></p></main>
 
-    <div id="test"> <header><h2>Major in <span class="special">Creative </span> Technologies</h2></header> </div>
+    <div id="test"> <h2>Major in <span class="special">Creative </span> Technologies</h2> </div>
 
-    <main> <p>The interdisciplinary Creative Technologies major emphasizes design and practice in the integration of digital technologies and the fine arts. In addition to foundational study across the fine arts, the major provides training and experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.
+    <p>The interdisciplinary Creative Technologies major emphasizes design and practice in the integration of digital technologies and the fine arts. In addition to foundational study across the fine arts, the major provides training and experiences across a range of creative/technical fields including video, sound, electronic music, music production, gaming, motion graphics, interactivity, AR/VR, UI/UX, mobile, web, and computer programming concepts.
     </p></main>
     </body>
     </html>
