--- a/assignment3/main.html
+++ b/assignment3/main.html
@@ -11,8 +11,8 @@
             <li><a href="requirements.html">Requirements</a></li>
             <li><a href="classes.html">Classes</a></li>
           </ul></nav>
-<header><h1>Creative Technologies Program (CTK)</h1></header>
-<img src="otter.jpg" alt="A little otter!" >
+<header><h1>Creative Technologies Program (CTK)</h1>
+<img src="otter.jpg" alt="A little otter!" ></header>
 
 <main><p><b>Address:</b> Campus Box 5750<br>
     <b>Phone:</b> (309) 438-2875<br>
