--- a/assignment3/classes.html
+++ b/assignment3/classes.html
@@ -11,8 +11,8 @@
             <li><a href="requirements.html">Requirements</a></li>
             <li><a href="classes.html">Classes</a></li>
           </ul></nav>
-          <header><h1>Creative Technologies Courses (CTK)</h1></header>
-<img src="corgi.jpg" alt="A funny little corgi!" >
+          <header><h1>Creative Technologies Courses (CTK)</h1>
+<img src="corgi.jpg" alt="A funny little corgi!" ></header>
 <main><h2>200 Level Classes</h2>
 
 <h4>201 - Basic Skills In The Digital Arts (3)</h4>
