--- a/assignment3/requirements.html
+++ b/assignment3/requirements.html
@@ -10,8 +10,8 @@
     <li><a href="requirements.html">Requirements</a></li>
     <li><a href="classes.html">Classes</a></li>
   </ul></nav>
-  <header><h1>Retention Requirements</h1></header>
-  <img src="cat.jpg" alt="A cool cat with glasses!" >
+  <header><h1>Retention Requirements</h1>
+  <img src="cat.jpg" alt="A cool cat with glasses!" ></header>
   <main><ul>
         <li><b>Sequence in Audio and Music Production and Interdisciplinary Technologies -</b> Students will be allowed to continue in this sequence <i>if they meet and continue to maintain an overall cumulative GPA of 2.00.</i>
         <li><b>Sequence in Game Design -</b> Students will be allowed to continue in this sequence <i>if they meet and continue to maintain an overall cumulative GPA of 2.50 and a cumulative GPA of 3.0 within the major.</i> Additionally, students in the Game Design Sequence must maintain consecutive Fall–Spring enrollment in their final at the University. Any student not enrolled at the university for more than one semester must reapply to the sequence. Students who leave the Sequence in Game Design may continue as a Creative Technologies major in Audio and Music Production or Interdisciplinary Technologies <i>if they have an overall cumulative GPA of 2.00.</i>
