--- a/FinalPortfolio/gamedesign.html
+++ b/FinalPortfolio/gamedesign.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>3D Models</title>
+	<title>Raef Suarez</title>
 	<link href="portfolio.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.typekit.net/faf6led.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -19,25 +19,22 @@
 		<div id=box><li><a href="contact.html" >Contact </a></li></div>
 		<div id=box><li><a href="mailto:rsuare1@ilstu.edu" target="_blank"><i class="bi bi-envelope-fill"></i>Email me</a></li></div>
 		<div id=box><li><a href="https://twitter.com/iamXe_" target="_blank"><i class="bi bi-twitter-x"></i></a></li></div>
-		</ul></nav>
+	</ul></nav> 
 	<div id="wrapper">
 		
-			
-			<div id="model1"><p>Dr. Stein</p></div>
-			<div id="stein"><a href="FrontStein.jpg" data-fancybox="gallery" data-caption="Front View of Custom Dr. Stein 3D Model">
-			<img src="FrontStein.jpg">
-  			</a>
-  			<a href="BackStein.jpg" data-fancybox="gallery" data-caption="Back View of Custom Dr. Stein 3D Model">
-			<img src="BackStein.jpg">
- 			 </a>
-  			<a href="ScytheStein.jpg" data-fancybox="gallery" data-caption="Custom 3D Model of Dr. Stein's Scythe">
-			<img src="ScytheStein.jpg">
-  			</a></div>
-			  <footer><p>©2023 Raef Suarez Portfolio Website. All Rights Reserved. Contact: raefdsuarez@gmail.com</p></footer>
-			
-            <script>   
+		<div id="model1"><p>Dungeon Escape</p></div>
+		<div id="dungeongame"><a href="Map.png" data-fancybox="gallery" data-caption="Map of my Dungeon Board game called Dungeon Escape.">
+		<img src="Map.png"></a>
+		  <a href="Map2.png" data-fancybox="gallery" data-caption="A picture of the finished game.">
+		<img src="Map2.png"></a>
+		  <a href="Sheet.png" data-fancybox="gallery" data-caption="This is a sell sheet for the boardgame.">
+		<img src="Sheet.png"></a>
+		  </div>
+			<footer><p>©2023 Raef Suarez Portfolio Website. All Rights Reserved. Contact: raefdsuarez@gmail.com</p></footer>
+			<script>   
 				Fancybox.bind("[data-fancybox]", {});
-			 </script>
-        </div>
+			</script>
+	</div>
+	
 </body>
 </html>
