--- a/FinalPortfolio/portfolio.html
+++ b/FinalPortfolio/portfolio.html
@@ -10,11 +10,13 @@
 <body>
 	<nav><ul>
 		<div id=box><li><a href="portfolio.html">Welcome Page</a></li></div>
-		<div id=box><li><a href="#" >Game Design</a></li></div>
+		<div id=box><li><a href="gamedesign.html" >Game Design</a></li></div>
 		<div id=box><li><a href="3dmodels.html" >3D Modeling </a></li></div>
 		<div id=box><li><a href="audio.html" >Audio Manipulation </a></li></div>
 		<div id=box><li><a href="sfx.html" >SFX </a></li></div>
 		<div id=box><li><a href="contact.html" >Contact </a></li></div>
+		<div id=box><li><a href="mailto:rsuare1@ilstu.edu" target="_blank"><i class="bi bi-envelope-fill"></i>Email me</a></li></div>
+		<div id=box><li><a href="https://twitter.com/iamXe_" target="_blank"><i class="bi bi-twitter-x"></i></a></li></div>
 	</ul></nav> 
 	<div id="wrapper">
 		
@@ -22,6 +24,8 @@
 			<img id="logo"src="rei.jpg" alt="Image of 3d model"><p id="test">I love making manga and anime inspired 3D models. I was first inspired by 3D models when I had seen them in video games such as Guilty Gear Strive and Halo. Since then, I had always looked up to the developers that made that happen and wanted to do it myself. Thus, I have been modeling in Blender for 2 years now and want to possibly pursue a job in modeling. I have a real passion for modeling and really love doing it! I make a lot of 3D models for use in Vr Chat, so I have experience in rigging, weight painting, and keeping models low-poly.
 		    </p>
 			<img src="cronaimg.jpg" class="image2" alt="My logo">
+			<footer><p>©2023 Raef Suarez Portfolio Website. All Rights Reserved. Contact: raefdsuarez@gmail.com</p></footer>
 	</div>
+	
 </body>
 </html>
